Use component storageclass to create storage class for nfs-client-provisioner

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -4,5 +4,10 @@ parameters:
     server: nfs.local
     path: /srv/nfs/export
     mountOptions: null
+    provisionerName: nfs-client-provisioner
+    storageClass:
+      name: nfs
+      archiveOnDelete: true
+      reclaimPolicy: Delete
     charts:
       nfs_client_provisioner: 1.2.9
