Change helm source to https://charts.containeroo.ch
https://kubernetes-charts.storage.googleapis.com is no
longer available.

--- a/class/nfs-client-provisioner.yml
+++ b/class/nfs-client-provisioner.yml
@@ -2,7 +2,7 @@ parameters:
   kapitan:
     dependencies:
       - type: helm
-        source: https://kubernetes-charts.storage.googleapis.com
+        source: https://charts.containeroo.ch
         version: ${nfs_client_provisioner:charts:nfs_client_provisioner}
         chart_name: nfs-client-provisioner
         output_path: dependencies/nfs-client-provisioner/helmcharts/nfs-client-provisioner
